Fix scrollbar showing in sidebar without overflow

--- a/src/view/styles/_sidebar.scss
+++ b/src/view/styles/_sidebar.scss
@@ -3,8 +3,10 @@
 
   overflow: {
     x: hidden;
-    y: scroll;
+    y: auto;
   }
+
+  user-select: none;
 }
 
 .notes-sidebar-item {
